refactor: update doc and change cat routes
