# src/swagger.json
@@ -1,72 +1,77 @@
 {
-    "openapi" : "3.0.3",
-    "info" : {
-        "title" : "RentalX Doc",
-        "description" : "This is an API Rent",
-        "version" : "1.0.4",
-        "contact" : {
-            "email" : "lucgom@alunos.utfpr.edu.br"
+    "openapi": "3.0.3",
+    "info": {
+        "title": "RentalX Doc",
+        "description": "This is an API Rent",
+        "version": "1.0.4",
+        "contact": {
+            "email": "lucgom@alunos.utfpr.edu.br"
         }
     },
-    "paths" : {
-        "/categories/post-category" : {
-            "post" : {
-                "tags" : ["Category"],
-                "summary" : "Create a category",
-                "description" : "Create a new category",
-                "requestBody" : {
-                    "content" : {
-                        "application/json" : {
+    "paths": {
+        "/categories": {
+            "post": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Create a category",
+                "description": "Create a new category",
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
                             "schema": {
-                                "type" : "object",
+                                "type": "object",
                                 "properties": {
-                                    "name" : {
+                                    "name": {
                                         "type": "string"
                                     },
-                                    "description" : {
+                                    "description": {
                                         "type": "string"
                                     }
                                 },
-                                "example" : {
-                                    "name" : "category name sample",
-                                    "description" : "category description sample"
+                                "example": {
+                                    "name": "category name sample",
+                                    "description": "Category description sample"
                                 }
                             }
                         }
                     }
                 },
-                "responses" : {
-                    "201" : {
-                        "description" : "Created"
+                "responses": {
+                    "201": {
+                        "description": "Created"
                     },
-                    "500" : {
-                        "description" : "Category already exists"
+                    "500": {
+                        "description": "Category already exists"
                     }
-                }  
-            }
-        },
-        "/categories/list-categories" : {
-            "get" : {
-                "tags" : ["Category"],
-                "summary" : "List all categories",
-                "description" : "List all categories",
-                "responses" : {
-                    "200" : {
-                        "description" : "Success",
-                        "content" : {
-                            "application" : {
-                                "application/json" : {
-                                    "schema" : {
-                                        "type" : "array",
-                                        "items" : {
-                                            "type" : "object",
-                                            "properties" : {
-                                                "name" : {
-                                                    "type" : "string" 
-                                                },
-                                                "description" : {
-                                                    "type" : "string"
-                                                }
+                }
+            },
+            "get": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "List all categories",
+                "description": "List all categories",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "name": {
+                                                "type": "string"
+                                            },
+                                            "description": {
+                                                "type": "string"
                                             }
                                         }
                                     }
@@ -84,6 +89,11 @@
                 ],
                 "summary": "Upload a new category",
                 "description": "Upload a new category",
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "requestBody": {
                     "content": {
                         "multipart/form-data": {
@@ -113,6 +123,11 @@
                 ],
                 "summary": "Create a specification",
                 "description": "Create a new specification",
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -131,19 +146,167 @@
                     }
                 }
             }
+        },
+        "/sessions": {
+            "post": {
+                "tags": [
+                    "Session"
+                ],
+                "summary": "Authentication user",
+                "description": "Authentication user",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "400": {
+                        "description": "Email or password incorrect!"
+                    }
+                }
+            }
+        },
+        "/cars": {
+            "post": {
+                "tags": [
+                    "Cars"
+                ],
+                "summary": "Create a new car",
+                "description": "Create a new car",
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Car"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Car already exists!"
+                    }
+                }
+            }
+        },
+        "/cars/images/{id}": {
+            "post": {
+                "tags": [
+                    "Cars"
+                ],
+                "summary": "Upload images",
+                "description": "Upload images",
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Car id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "images": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string",
+                                            "format": "binary"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
         }
     },
-    "definitions" : {
+    "definitions": {
         "Specification": {
             "type": "object",
             "properties": {
-              "name": {
-                "type": "string"
-              },
-              "description": {
-                "type": "string"
-              }
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                }
             }
-          }
+        },
+        "Car": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "daily_rate": {
+                    "type": "number"
+                },
+                "license_plate": {
+                    "type": "string"
+                },
+                "fine_amount": {
+                    "type": "number"
+                },
+                "brand": {
+                    "type": "string"
+                },
+                "category_id": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
+            }
+        }
     }
 }
